--- a/list.html
+++ b/list.html
@@ -23,15 +23,15 @@ tfoot {
         </tr>
         <tr>
             <td>固定ページ</td>
-            <td><a href="/index.html">/page.html</a></td>
+            <td><a href="/page.html">/page.html</a></td>
         </tr>
         <tr>
             <td>投稿ページ</td>
-            <td><a href="/index.html">/single.html</a></td>
+            <td><a href="/single.html">/single.html</a></td>
         </tr>
         <tr>
             <td>一覧ページ</td>
-            <td><a href="/index.html">/tag.html</a></td>
+            <td><a href="/tag.html">/tag.html</a></td>
         </tr>
         <tr>
             <td>エラーページ</td>
